# godot-code-obfuscation

./: README.md  main.py  pyproject.toml
src/godot_code_obfuscation/: cli.py  collector.py  debugvisitor.py  renamer.py  stripper.py  symbols.py  utils.py  visitor.py
